# cryo-ttt

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  prototyping.ipynb  pyproject.toml  requirements.txt  setup.py
src/: README_spinach_subsets.md  analyze_membrain_data.py  analyze_mrc_stats.py  balanced_subsets.csv  claude_vis_subset.py  create_balanced_subsets.py  data_prep.py  debugging.ipynb  denoiseg_ttt.ipynb  denoiseg_ttt_v2.ipynb  denoiseg_ttt_v3.ipynb  dummy_script.py  evaluation.py  explore.ipynb  f2fd_ttt.ipynb  generate_spinach_subsets.py  membrain.sh  membrain_preprocess.sh  nifti_analysis_summary.csv  paper_drawing.ipynb  plotting.ipynb  run_scalin_law.py  run_scaling_law_ttt.sh  schedule.sh  schedule2.sh  spinach_subsets.yaml  tent.ipynb  testing.py  testing.sh  tmp_drawing.ipynb  training.py  training.sh  ttt.ipynb  ttt.py  ttt.sh  ttt_subset.py  ttt_subset.sh  tuning.py  wandb.ipynb
src/cache/: ttt_results_def_def_macro.pkl  ttt_results_def_vpp.pkl  ttt_results_def_vpp_macro.pkl  ttt_results_vpp_def_macro.pkl  ttt_results_vpp_vpp_macro.pkl
src/configs/: config.yaml  data_prep.yaml  tent.yaml  test_split.yaml  testing.yaml  tomo_list.csv  train_split.yaml  training.yaml  ttt.yaml
src/configs/method/: deepict_unet3d.yaml  deepict_unet3d_ittt.yaml  denoiseg.yaml  denoiseg_f2fd.yaml  denoiseg_v2.yaml  mae.yaml  memdenoiseg.yaml  memdenoiseg_tent.yaml  memdenoiseg_testing.yaml  memdenoiseg_ttt.yaml  memseg.yaml  memseg_testing.yaml
src/configs/method/train_tomo_names/: not_spinach.yaml
src/datasets/: __init__.py  augmentation.py  dataset.py  deepict_dataset.py  denoiseg_dataset.py  f2fd_dataset.py  memseg_dataset.py  memseg_n2v_dataset.py  patch_dataset.py  tomo_dataset.py  transforms.py
src/datasets/memseg/: memseg_augmentation.py  memseg_transforms.py
src/models/: __init__.py  deepict_unet3d.py  deepict_unet3d_ttt.py  denoiseg.py  losses.py  mae.py  memseg.py  memseg_n2v.py  sequential_baseline.py  tent.py  unet3d.py
src/models/f2fd/: model.py  partialconv3d.py
src/utils/: colormaps.py  ddw_subtomos.py  deepict_utils.py  f2fd_utils.py  metrics.py  subtomos.py  utils.py
src/utils/deepict/: subtomos.py
ttt/: data_prep.py  tent_subset.sh  testing.py  training.py  ttt.py  ttt_subset.py
ttt/configs/method/: memdenoiseg.yaml
ttt/datasets/: __init__.py  denoiseg_dataset.py  f2fd_dataset.py  memseg_dataset.py  tomo_dataset.py  transforms.py
ttt/datasets/memseg/: memseg_augmentation.py
ttt/models/: __init__.py  losses.py  memseg.py  unet3d.py
ttt/utils/: ddw_subtomos.py  metrics.py
tutorials/: train_and_ttt.ipynb
