[project]
name = "cryo-ttt"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "~=3.10.0"
dependencies = [
    "hydra-core>=1.3.2",
    "matplotlib>=3.10.3",
    "monai>=1.4.0",
    "mrcfile>=1.5.4",
    "nibabel>=5.3.2",
    "pandas>=2.3.0",
    "pillow>=11.0.0",
    "pip>=25.1.1",
    "pytorch-lightning~=2.3.0",
    "scipy>=1.15.3",
    "seaborn>=0.13.2",
    "torch==2.0.1",
    "torchaudio==2.0.2",
    "torchmetrics~=1.6.3",
    "torchvision==0.15.2",
    "wandb>=0.20.1",
]
authors = [
    {name="Diyor Khayrutdinov", email="diyor.Khayrutdinov@tum.de"}
]
